[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "QuCoPy"
version = "0.0.1"
authors = [
  { name="Luis Blank", email="Luis.Blank@outlook.com" },
]
description = "Quantum Computing Python Package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: PD",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://https://github.com/luisblank/QuCoPy"
"Bug Tracker" = "https://https://github.com/luisblank/QuCoPy/issues"